--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="aligncenter">
               <ul class="social-network social-circle">
                 
-                <li><a href="https://www.facebook.com/jhonfredy.enriquezmunoz" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 
                <!--  <li><a href="./views/contacto.php" class="icoGoogle" title="GMAIL"><i class="fa fa-envelope"></i></a></li> -->
                 <li><a href="https://wa.me/573045720744" class="iconwhatsapp" title="whatsapp"><i class="fab fa-whatsapp"></i></a></li>
